public class Elevator extends Thread {
    public int getMyId() {
        return 0;
    }
}
